Closed Bug 1334227 Opened 8 years ago Closed 8 years ago

Crash [@ nsFloatManager::FloatInfo::FloatInfo ]

Categories

(Core :: Layout: Floats, defect)

x86_64
Windows 10
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla54
Tracking Status
firefox52 --- unaffected
firefox53 --- unaffected
firefox54 --- verified

People

(Reporter: sebo, Assigned: TYLin)

References

(Blocks 1 open bug, )

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Presumably mShapeInfo is null because we hit one of the types that we parse but don't yet implement?

Given that this feature is pref'd off, even on nightly, I don't think this is a big deal.  I think this should go away once all the types are implemented.
(In reply to David Baron :dbaron: ⌚️UTC-8 from comment #1)
> Presumably mShapeInfo is null because we hit one of the types that we parse
> but don't yet implement?

You're right. It's crashing when using the polygon() or the inset() function. Test case:
data:text/html,<div style="shape-outside:polygon(0 0, 0 200px, 300px 600px);float:left;"></div>

Sebastian
Blocks: shape-outside
No longer blocks: 1326406
Depends on: 1326407, 1326409
Crash Signature: [@ nsFloatManager::FloatInfo::FloatInfo ]
Keywords: crash
Comment on attachment 8832776 [details]
Bug 1334227 - Early return in unimplemented shape-outside cases.

https://reviewboard.mozilla.org/r/109042/#review110178

::: layout/generic/nsFloatManager.cpp:721
(Diff revision 1)
> +  // XXX: Remove this null check once all the shape-outside values are
> +  // implemented.
> +  if (!mShapeInfo) {
> +    return;
> +  }

I'd prefer you leave the assertion here, and early return in the two unimplemented cases.
Attachment #8832776 - Flags: review?(xidorn+moz)
Comment on attachment 8832776 [details]
Bug 1334227 - Early return in unimplemented shape-outside cases.

https://reviewboard.mozilla.org/r/109042/#review110182
Attachment #8832776 - Flags: review?(xidorn+moz) → review+
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/abc3cb8fff3e
Early return in unimplemented shape-outside cases. r=xidorn
xidorn, thank you for the review.
Assignee: nobody → tlin
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/abc3cb8fff3e
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Works with Nightly 2017-02-03, thanks for the fast fix!

Sebastian
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: