Bug 1334227 - Early return in unimplemented shape-outside cases. r=xidorn

MozReview-Commit-ID: 8l6C9LsLpJI